# FastDDS_practice

./: README.md
.devcontainer/: devcontainer.json  post_create_command.sh
docker/: Dockerfile
docs/security/: prompt_notebookLM.md
sender/: CMakeLists.txt
sender/idl/idl/: HelloWorld.idl
sender/idl/srcs/: HelloWorld.cxx  HelloWorld.h
sender/scripts/: 01_fastddsgen_idl.sh
sender/srcs/: publisher.cpp
